# aiodot

./: .gitignore  LICENSE  README.fa.md  README.md  pyproject.toml  requirements.txt  setup.py
aiodot/: __init__.py  auth.py  client.py  models.py  wallet.py
examples/: avatar_updater.py  chat.py  create_dot.py  echo_bot.py  me.py  search.py
