[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiodot"
version = "1.2.0"
description = "Async Python client for MyDot.one social platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "karbaladev.ir", email = "karbaladev.ir@gmail.com"}
]
keywords = ["mydot", "aiodot", "mydot-bot", "social-media", "async", "bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://karbaladev.ir"
Documentation = "https://samon-fs.github.io/aiodot-docsweb/"
Repository = "https://github.com/karbaladevir/aiodot"
Issues = "https://github.com/karbaladevir/aiodot/issues"
License = "https://github.com/karbaladevir/aiodot/blob/main/LICENSE"